fix(ios): add missing scanner localization keys to all languages
- Add scanner.copy_url, scanner.share, scanner.dismiss to all 15 language files
- Ensures complete translation parity with English base (201 keys)
- Verified all iOS localizations now have 100% coverage

--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -185,6 +185,9 @@
 "scanner.status_scanning" = "جاري المسح";
 "scanner.status_paused" = "متوقف مؤقتاً";
 "scanner.view_details" = "عرض التفاصيل";
+"scanner.copy_url" = "نسخ الرابط";
+"scanner.share" = "مشاركة";
+"scanner.dismiss" = "إغلاق";
 "scanner.flash_on" = "الفلاش مفعّل";
 "scanner.flash_off" = "الفلاش مطفأ";
 "scanner.open_history" = "فتح السجل";
