feat(ios): add language selector with 16 languages in Settings (v1.17.43)
New Language section in iOS Settings:
- SupportedLanguage enum with all 16 languages
- LanguagePickerView with search, flags, and native names
- System Default option to follow device language
- Uses UserDefaults("AppleLanguages") for language override
- Localized language UI in 6 core languages

Languages: en, de, es, fr, it, pt, ru, ja, ko, zh-Hans, ar, hi, id, th, tr, vi

Build verified: xcodebuild BUILD SUCCEEDED

--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -261,3 +261,11 @@
 // MARK: - Common
 "common.enabled" = "مفعّل";
 "common.disabled" = "معطّل";
+
+// MARK: - Language Settings
+"settings.language" = "اللغة";
+"settings.language_section" = "اللغة";
+"settings.language_system" = "الإعداد الافتراضي للنظام";
+"settings.language_search" = "البحث عن اللغات";
+"settings.language_footer" = "حدد لغتك المفضلة. سيستخدم التطبيق اللغة المحددة لجميع النصوص والمحتوى.";
+"common.done" = "تم";
