--- a/iosApp/QRShield/tr.lproj/Localizable.strings
+++ b/iosApp/QRShield/tr.lproj/Localizable.strings
@@ -261,3 +261,11 @@
 // MARK: - Common
 "common.enabled" = "Etkin";
 "common.disabled" = "Devre Dışı";
+
+// MARK: - Language Settings
+"settings.language" = "Language";
+"settings.language_section" = "Language";
+"settings.language_system" = "System Default";
+"settings.language_search" = "Search languages";
+"settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
+"common.done" = "Done";
