fix(ios): language selection now works with restart prompt (v1.17.44)
New LanguageManager:
- Singleton manages language state and bundle loading
- Sets UserDefaults("AppleLanguages") for system persistence
- @MainActor with nonisolated localized methods for thread safety

Restart Alert:
- Shows after selecting language
- "Later" - applies on next app launch
- "Restart Now" - immediately quits app for quick restart

Build verified: xcodebuild BUILD SUCCEEDED

--- a/iosApp/QRShield/en.lproj/Localizable.strings
+++ b/iosApp/QRShield/en.lproj/Localizable.strings
@@ -286,3 +286,7 @@
 "settings.language_search" = "Search languages";
 "settings.language_footer" = "Select your preferred language. The app will use the selected language for all text and content.";
 "common.done" = "Done";
+"settings.language_changed" = "Language Changed";
+"settings.restart_later" = "Later";
+"settings.restart_now" = "Restart Now";
+"settings.language_restart_message" = "To fully apply the new language, please restart the app.";
