feat(ios): add RestartRequiredView - Apple HIG compliant restart screen (v1.17.45)
New RestartRequiredView with:
- Animated globe icon with pulse effect
- Clear title and subtitle with selected language name
- Step-by-step numbered instructions (1-2-3)
- 'Close App' button using UIApplication.suspend + graceful exit
- 'I'll Restart Later' button for manual restart
- Error alert if automatic close fails

Apple HIG Compliance (per 2025 documentation research):
- Does NOT use bare exit(0) which logs as crash
- Uses UIApplication.perform("suspend") first
- Graceful termination after app is suspended
- Provides manual instructions as fallback

Added 8 new restart screen localization keys

Build verified: xcodebuild BUILD SUCCEEDED

--- a/iosApp/QRShield/en.lproj/Localizable.strings
+++ b/iosApp/QRShield/en.lproj/Localizable.strings
@@ -290,3 +290,14 @@
 "settings.restart_later" = "Later";
 "settings.restart_now" = "Restart Now";
 "settings.language_restart_message" = "To fully apply the new language, please restart the app.";
+
+// MARK: - Restart Required Screen
+"settings.restart_title" = "Restart Required";
+"settings.restart_subtitle" = "To display QR-SHIELD in %@, please restart the app.";
+"settings.restart_step1" = "Tap 'Close App' below";
+"settings.restart_step2" = "Swipe up from the app switcher to fully close";
+"settings.restart_step3" = "Reopen QR-SHIELD to see the new language";
+"settings.close_app" = "Close App";
+"settings.restart_error_title" = "Restart Error";
+"settings.restart_error_message" = "Unable to close the app automatically. Please close and reopen the app manually to apply your language change.";
+"common.ok" = "OK";
