feat(ios): complete localization sync - all 16 languages now 220/220 keys (v1.17.46)
Added 13 missing restart screen translations to all languages:
- settings.restart_title, restart_subtitle, restart_step1/2/3
- settings.close_app, restart_error_title, restart_error_message
- settings.restart_later, restart_now, language_changed
- settings.language_restart_message, common.ok

Languages updated: ar, de, es, fr, hi, id, it, ja, ko, pt, ru, th, tr, vi, zh-Hans

Bug fix: Fixed Chinese (zh-Hans) unescaped quotes in restart_step1

Validation: All 16 plutil lint OK, xcodebuild BUILD SUCCEEDED

--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -269,3 +269,18 @@
 "settings.language_search" = "البحث عن اللغات";
 "settings.language_footer" = "حدد لغتك المفضلة. سيستخدم التطبيق اللغة المحددة لجميع النصوص والمحتوى.";
 "common.done" = "تم";
+
+// MARK: - Restart Required Screen
+"settings.restart_title" = "يتطلب إعادة التشغيل";
+"settings.restart_subtitle" = "لعرض QR-SHIELD بـ %@، يرجى إعادة تشغيل التطبيق.";
+"settings.restart_step1" = "اضغط على 'إغلاق التطبيق' أدناه";
+"settings.restart_step2" = "اسحب لأعلى للإغلاق بالكامل";
+"settings.restart_step3" = "أعد فتح QR-SHIELD لرؤية اللغة الجديدة";
+"settings.close_app" = "إغلاق التطبيق";
+"settings.restart_error_title" = "خطأ في إعادة التشغيل";
+"settings.restart_error_message" = "تعذر إغلاق التطبيق تلقائياً. يرجى إغلاقه وإعادة فتحه يدوياً.";
+"common.ok" = "حسناً";
+"settings.language_changed" = "تم تغيير اللغة";
+"settings.restart_now" = "إعادة التشغيل الآن";
+"settings.language_restart_message" = "يجب إعادة تشغيل التطبيق لتطبيق اللغة الجديدة.";
+"settings.restart_later" = "لاحقاً";
